--- a/stubs/package.json
+++ b/stubs/package.json
@@ -23,7 +23,6 @@
         "axios": "^1.8.3",
         "laravel-precognition-alpine": "^0.5.5",
         "prettier-plugin-antlers": "^2.0.5",
-        "swiper": "^11.1.0",
-        "wretch": "^2.11.0"
+        "swiper": "^11.1.0"
     }
 }
