--- a/stubs/package.json
+++ b/stubs/package.json
@@ -16,9 +16,8 @@
     },
     "dependencies": {
         "@fontsource-variable/readex-pro": "^5.2.5",
-        "@tailwindcss/postcss": "^4.0.0-beta.8",
         "@tailwindcss/typography": "^0.5.9",
-        "@tailwindcss/vite": "^4.0.0-beta.8",
+        "@tailwindcss/vite": "^4.1.4",
         "alpinejs-defer": "^1.0.2",
         "axios": "^1.8.3",
         "laravel-precognition-alpine": "^0.5.5",
