--- a/stubs/package.json
+++ b/stubs/package.json
@@ -11,7 +11,7 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.0",
         "postcss-import": "^16.0.0",
-        "tailwindcss": "^4.0.0-beta.8",
+        "tailwindcss": "^4.1.4",
         "vite": "^6.2.2"
     },
     "dependencies": {
